# sports-analytics-hub

./: .env.example  .gitignore  Dockerfile.airflow  README.md  Untitled.ipynb  docker-compose.yml  documenting-the-process.md  main.py  pyproject.toml  requirements-composer.txt  requirements.txt
.cursorrules/: clean-code.mdc
airflow/dags/: nfl_data_extract.py  nfl_data_load.py  nfl_dbt_transform.py
airflow/logs/scheduler/: latest
airflow/utils/: __init__.py  nfl_tasks.py
dbt_project/: .user.yml  dbt_project.yml  packages.yml
dbt_project/models/marts/nfl/: player_game_performance_mart.sql  player_season_stats_mart.sql  team_game_performance_mart.sql  team_season_stats_mart.sql
dbt_project/models/staging/nfl/: sources.yml  stg_combine.sql  stg_contracts.sql  stg_depth_charts.sql  stg_draft_picks.sql  stg_ff_opportunity.sql  stg_fines.sql  stg_nextgen_stats.sql  stg_officials.sql  stg_play_by_play.sql  stg_player_stats.sql  stg_players.sql  stg_rosters.sql  stg_rosters_weekly.sql  stg_schedules.sql  stg_snap_counts.sql  stg_teams.sql  stg_trades.sql
docs/: architecture_diagram.md  nflreadpy.md
docs/source-data/: nflreadpy.md
infrastructure/terraform/: bigquery.tf  main.tf  outputs.tf  service_accounts.tf  storage.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
ingestion/: config.py  requirements.txt
ingestion/nfl/: extractor.py  loader.py
ingestion/scrapers/: nfl-xpath.html  nfl_fines_scraper.py  test_html_structure.py
ingestion/storage/: __init__.py  gcs_to_bq_loader.py  gcs_writer.py
notebooks/exploratory/: kicking.ipynb  nfl-data.ipynb  nflreadpy-initial-explore.ipynb
scripts/: nfl_data_ingest.py
